Opened 7 years ago
Closed 7 years ago
#8336 closed defect (fixed)
memory leaks in vf_showfreqs
| Reported by: | Suhwan | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avfilter |
| Version: | git-master | Keywords: | showfreqs leak |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
There are memory leaks in ff_default_get_audio_buffer
How to reproduce:
% ffmpeg_g -y -i $PoC -filter_complex showfreqs -vbsf remove_extra -c ffvhuff tmp.dnxhd ffmpeg version N-95554-g9d711a90fd Copyright (c) 2000-2019 the FFmpeg developers built with clang version 6.0.0-1ubuntu2 (tags/RELEASE_600/final) configuration: --cc=clang --cxx=clang++ --ld=clang --enable-debug
Here's Valgrind log
==20368== HEAP SUMMARY: ==20368== in use at exit: 286,808 bytes in 161 blocks ==20368== total heap usage: 5,859 allocs, 5,698 frees, 386,379,085 bytes allocated ==20368== ==20368== 286,808 (17,152 direct, 269,656 indirect) bytes in 32 blocks are definitely lost in loss record 10 of 10 ==20368== at 0x4C31E76: memalign (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==20368== by 0x4C31F91: posix_memalign (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==20368== by 0xF67AD2: av_malloc (mem.c:87) ==20368== by 0xF67CD8: av_mallocz (mem.c:238) ==20368== by 0xF5F0BA: av_frame_alloc (frame.c:191) ==20368== by 0x2CF713: ff_frame_pool_get (framepool.c:201) ==20368== by 0x2A2DE3: ff_default_get_audio_buffer (audio.c:73) ==20368== by 0x400239: filter_frame (af_aresample.c:196) ==20368== by 0x2BDE8B: ff_filter_frame_framed (avfilter.c:1084) ==20368== by 0x2BDE8B: ff_filter_frame_to_filter (avfilter.c:1232) ==20368== by 0x2BDE8B: ff_filter_activate_default (avfilter.c:1281) ==20368== by 0x2BDE8B: ff_filter_activate (avfilter.c:1442) ==20368== by 0x2C2747: push_frame (buffersrc.c:187) ==20368== by 0x2C2747: av_buffersrc_add_frame_internal (buffersrc.c:261) ==20368== by 0x2C2747: av_buffersrc_add_frame_flags (buffersrc.c:170) ==20368== by 0x295AAC: ifilter_send_frame (ffmpeg.c:2187) ==20368== by 0x295AAC: send_frame_to_filters (ffmpeg.c:2261) ==20368== by 0x295D98: decode_audio (ffmpeg.c:2328) ==20368== ==20368== LEAK SUMMARY: ==20368== definitely lost: 17,152 bytes in 32 blocks ==20368== indirectly lost: 269,656 bytes in 129 blocks ==20368== possibly lost: 0 bytes in 0 blocks ==20368== still reachable: 0 bytes in 0 blocks ==20368== suppressed: 0 bytes in 0 blocks ==20368== ==20368== For counts of detected and suppressed errors, rerun with: -v ==20368== ERROR SUMMARY: 1 errors from 1 contexts (suppressed: 0 from 0)
Please confirm.
Thanks
Attachments (1)
Change History (3)
by , 7 years ago
comment:1 by , 7 years ago
| Component: | undetermined → avfilter |
|---|---|
| Keywords: | showfreqs leak added |
| Status: | new → open |
comment:2 by , 7 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
| Summary: | memory leaks in ff_default_get_audio_buffer → memory leaks in vf_showfreqs |
Fixed in 1aa4fc1ec204fabed5c40873b86751976167272f.
Note:
See TracTickets
for help on using tickets.



poc